src/styles/components/_product-card.scss
@use "../utils/variables" as var;

.product-card {
  display: flex;
  flex-direction: column;
  gap: 20px;
  padding: 20px;
  border-radius: 6px;
  box-shadow: 0 0 15px -2px rgba($color: var.$black, $alpha: 0.1);

  &__meta {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
  }

  &__badges {
    display: flex;
    align-items: center;
    gap: 10px;
    flex-wrap: wrap;
  }

  &__badges-item {
    font-size: 12px;
    font-weight: 700;
    display: flex;
    align-items: center;
    gap: 8px;
    padding: 6px 8px;
    background-color: var(--badge-color);
    border-radius: 6px;
  }

  &__wishlist {
    margin-left: auto;
    padding: 6px;
  }

  &__image {
    border-radius: 6px;

    img {
      width: 100%;
      border-radius: 6px;

      @media (min-width: var.$desktop) {
        aspect-ratio: 270 / 278;
        object-fit: cover;
      }
    }
  }

  &__info {
    padding: 0 0 20px;
    border-bottom: 1px solid var.$border;
  }

  &__title {
    font-weight: 700;
  }

  &__description {
    font-size: 14px;
    color: var.$gray;
  }

  &__controls {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 13px;
  }

  &__price {
    font-size: 22px;
    font-weight: 700;
    display: flex;
    align-items: center;
    justify-content: flex-end;
  }
}

